--- a/keliling.html
+++ b/keliling.html
@@ -58,7 +58,7 @@
 
 
     <footer>
-        <!-- footer belum di kasih contoh kak huhu T_T -->
+        <!-- footer belum di kasih contoh kak huhu sayang deh -->
     </footer>
 </body>
 </html>
