--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
     
     <header>Kalkulator Segitiga</header>
+    <h4>Hi guys,selamat datang!</h4>
+    <h4>Ini adalah sebuah web apps sederhana yang berfungsi untuk menghitung luas dan keliling segitiga.</h4>
 
     <center>
         <a href="keliling.html" class="custom-button">Menghitung Keliling</a><br><br>
