--- a/luas.html
+++ b/luas.html
@@ -54,7 +54,7 @@
 
 
     <footer>
-        <!-- footer belum di kasih contoh kak huhu T_T -->
+        <p>&copy; 2024 Kalkulator Segitiga App. All rights reserved.</p>
     </footer>
 </body>
 </html>
