--- a/keliling.html
+++ b/keliling.html
@@ -14,9 +14,7 @@
 
 <body>
     
-    <header>Keliling Segitiga
-
-    </header>
+    <header>Keliling Segitiga</header>
     <div class="main">
         
         <div class="container">
@@ -58,7 +56,7 @@
 
 
     <footer>
-        <!-- footer belum di kasih contoh kak huhu sayang deh -->
+        <p>&copy; 2024 Kalkulator Segitiga App. All rights reserved.</p>
     </footer>
 </body>
 </html>
