--- a/keliling.html
+++ b/keliling.html
@@ -20,9 +20,11 @@
         <div class="container">
             <img src="asset/segitiga.png" alt="gambar segitiga">
         </div>
+        <div class="container">
         <strong id="bagianbawah">Rumus Keliling Segitiga:
             <p1>K= Sisi A + Sisi B + Sisi C</p1>
         </strong>
+        </div>
         <br>
         <br>  
         <section class="section">
