--- a/luas.html
+++ b/luas.html
@@ -18,13 +18,14 @@
 
     </header>
     <div  class="main">
-        <br>
-        <strong>Rumus Luas Segitiga:
-            <p1>L= 1/2 x a x t</p1>
-        </strong>
         
         <div class="container">
             <img src="asset/segitiga.png" alt="gambar segitiga">
+        </div>
+        <div class="container">
+        <strong>Rumus Luas Segitiga:
+            <p1>L= 1/2 x a x t</p1>
+        </strong>
         </div>
         <br>
         <br>  
